--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.pesticidessellingapp">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
-    <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
-
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:hardwareAccelerated="true"
@@ -21,9 +27,32 @@
         android:theme="@style/Theme.PesticidesSellingApp"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyC-fVsByQ9JaHr9fzHdeqMNVDDQU4UUfJg" />
+
+        <activity
+            android:name=".Unused.MapsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_maps" />
+        <activity
+            android:name=".userScreens.ProceedRent"
+            android:exported="true" />
         <activity
             android:name=".userScreens.ActivityDocumentVerify"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".adminScreens.AdminDashboard"
             android:exported="true" />
@@ -32,12 +61,9 @@
             android:exported="true" />
         <activity
             android:name=".CommonScreens.userSelecting"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".userScreens.Check_Out"
-            android:exported="false" />
-        <activity
-            android:name=".userScreens.Tractors_Details2"
             android:exported="false" />
         <activity
             android:name=".userScreens.Activity_Product_Details"
@@ -53,7 +79,7 @@
             android:exported="true" />
         <activity
             android:name=".userScreens.Help_Page"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".userScreens.Privacy_page"
             android:exported="false" />
@@ -89,7 +115,7 @@
             android:name=".userScreens.Land_Details"
             android:exported="true" />
         <activity
-            android:name=".userScreens.Tractors_Details"
+            android:name=".userScreens.Tractors_Details2"
             android:exported="true" />
         <activity
             android:name=".userScreens.Owner_Add"
@@ -111,9 +137,6 @@
             android:name=".userScreens.Payment_Continuning"
             android:exported="true" />
         <activity
-            android:name=".Unused.Rent_Tractor"
-            android:exported="false" />
-        <activity
             android:name=".userScreens.Place_Order_Page"
             android:exported="false" />
         <activity
@@ -122,16 +145,6 @@
         <activity
             android:name=".Auth.LoginActivity"
             android:exported="true" />
-        <activity
-            android:name=".Unused.UserDashboardActivity"
-            android:exported="false"
-            android:label="@string/title_activity_user_dashboard" />
-        <activity
-            android:name=".Unused.Vehicle_owner_login"
-            android:exported="false" />
-        <activity
-            android:name=".Unused.ProductItem$UserLoginActivity"
-            android:exported="false" />
         <activity
             android:name=".CommonScreens.UserSelectionActivity"
             android:exported="true" />
