--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,41 +27,28 @@
         android:theme="@style/Theme.PesticidesSellingApp"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
-        <!--
-             TODO: Before you run your application, you need a Google Maps API key.
-
-             To get one, follow the directions here:
-
-                https://developers.google.com/maps/documentation/android-sdk/get-api-key
-
-             Once you have your API key (it starts with "AIza"), define a new property in your
-             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
-             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
-        -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyC-fVsByQ9JaHr9fzHdeqMNVDDQU4UUfJg" />
-
         <activity
             android:name=".Unused.MapsActivity"
             android:exported="false"
             android:label="@string/title_activity_maps" />
         <activity
             android:name=".userScreens.ProceedRent"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".userScreens.ActivityDocumentVerify"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".adminScreens.AdminDashboard"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".adminScreens.AdminAddProductActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".CommonScreens.userSelecting"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".userScreens.Check_Out"
             android:exported="false" />
@@ -73,13 +60,13 @@
             android:exported="false" />
         <activity
             android:name=".userScreens.Edit_Profile"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".userScreens.My_Orders"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".userScreens.Help_Page"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".userScreens.Privacy_page"
             android:exported="false" />
@@ -95,37 +82,33 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".userScreens.Order_sucessfull_page"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".userScreens.Cart_View"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".userScreens.Booking_Sucessful"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".userScreens.Payment_Gateway_Rental"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".userScreens.Land_Details"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".userScreens.Tractors_Details2"
-            android:exported="true" />
-        <activity
-            android:name=".userScreens.Owner_Add"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".userScreens.Search_Recyclerview"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".userScreens.UserDashboardActivity"
-            android:exported="true"
+            android:exported="false"
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".CommonScreens.SignUpActivity"
@@ -135,20 +118,16 @@
             android:exported="false" />
         <activity
             android:name=".userScreens.Payment_Continuning"
-            android:exported="true" />
-        <activity
-            android:name=".userScreens.Place_Order_Page"
             android:exported="false" />
         <activity
             android:name=".userScreens.Edit_Information_Page"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".Auth.LoginActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".CommonScreens.UserSelectionActivity"
-            android:exported="true" />
-
+            android:exported="false" />
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
