added api for post property

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,6 +128,9 @@
         <activity
             android:name=".CommonScreens.UserSelectionActivity"
             android:exported="false" />
+
+        <activity android:name=".userScreens.AddRentalActivity"
+            android:exported="false"/>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
