--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,15 +4,19 @@
     package="com.example.pesticidessellingapp">
 
     <uses-feature
-        android:name="android.hardware.camera"
-        android:required="false" />
+    android:name="android.hardware.camera"
+    android:required="false" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
-    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+
+
+
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
@@ -27,9 +31,14 @@
         android:theme="@style/Theme.PesticidesSellingApp"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".SampleActivity"
+            android:exported="false" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyC-fVsByQ9JaHr9fzHdeqMNVDDQU4UUfJg" />
+
         <activity
             android:name=".Unused.MapsActivity"
             android:exported="false"
@@ -82,6 +91,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -128,9 +138,10 @@
         <activity
             android:name=".CommonScreens.UserSelectionActivity"
             android:exported="false" />
+        <activity
+            android:name=".userScreens.AddRentalActivity"
+            android:exported="false" />
 
-        <activity android:name=".userScreens.AddRentalActivity"
-            android:exported="false"/>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
